# ExpertABSA

./: .env.template  Agent_pools.py  Experiment2_error_corrections.py  Experiment_Res_ENG.py  Experiment_lap_ENG.py  KBS_constant.py  README.md  commodity_experiment.py  few_shots_example_agent.py  pyproject.toml  requirements.txt  utils.py
LAP14/: lap_14_test.json  lap_14_train.json
RES14/: res_14_all.json  res_14_test.json  res_14_train.json
commodity_dataset/: commodity25_test.json  commodity25_train.json
lap14_prompt_output/: few_shots_pools_chinese.json  few_shots_pools_english.json
prompt_templates_comm25/: commodity_error_correction_agent.yaml  commodity_guidance_agent.yaml  commodity_polarity_agent.yaml  commodity_reason_expert_agent.yaml
prompt_templates_lap14/english_version/: lap14_error_corrections_agent.yaml  lap14_guidance_agent_eng_prompt.yaml  lap14_polarity_agent.yaml  lap14_reason_expert_eng_prompt.yaml
prompt_templates_res14/english_version/: res14_polarity_agent_eng_prompt.yaml  res14_reason_expert_eng_prompt.yaml  res_14_error_corrections_agent_eng_prompt.yaml  res_14_guidance_expert_eng_prompt.yaml
res14_prompt_output/: chinese_few_shot.json  english_few_shot.json
testing_comm25/: commodity_test.py  few_shots_pools.json
testing_lap_14/: testing_lap_14_english.py
testing_res_14/: evaluation_res14_english.py
testing_res_14/main_result_and_ablation_study_english/expertabsa_llama_epochs0/: expertabsa_metrics_0.txt  expertabsa_result_0.xlsx
(+5 files in other folders)
