[project]
name = "AAAI_code_submission"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
]
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "datasets~=2.16",
    "transformers~=4.37.0",
    "requests[socks]==2.31.0",
    "scipy==1.11.3",
    "scikit-learn==1.3.2",
    "python-dotenv==1.0.0",
    "jsonlines==4.0.0",
    "loguru==0.7.2",
    "langchain==0.1.13",
    "langchain-openai==0.1.0",
    "sentence-transformers~=3.0",
    "faiss-cpu~=1.8",
    "spacy>=3.7.5",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "langchain-community>=0.0.38",
    "openpyxl==3.1.2",
    "dotenv>=0.9.9",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
